--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
   <section class="slider">
     
     <div class="slider__container">
-      <div class="slider__item slider__item-1" style="background-image: url(../img/slider-img-1.png);">
+      <div class="slider__item slider__item-1" style="background-image: url(img/slider-img-1.png);">
           <div class="slider__inner">
             <div class="slider__text">
               <h3 class="slider__subtitle subtitle">Демографическая политика</h3>
@@ -54,7 +54,7 @@
             <button class="slider__btn"> <a href="#">Подробнее</a></button>
           </div>
       </div>
-      <div class="slider__item slider__item-2" style="background-image: url(../img/slider-img-2.png);">
+      <div class="slider__item slider__item-2" style="background-image: url(img/slider-img-2.png);">
         <div class="slider__inner">
           <div class="slider-text">
             <h3 class="slider__subtitle subtitle">Семейная политика:</h3>
@@ -63,7 +63,7 @@
           <button class="slider__btn"> <a href="#">Подробнее</a></button>
         </div>
       </div>
-      <div class="slider__item slider__item-3" style="background-image: url(../img/slider-img-3.png);">
+      <div class="slider__item slider__item-3" style="background-image: url(img/slider-img-3.png);">
         <div class="slider__inner">
           <div class="slider__text">
             <h5 class="slider__uptite title">Деятельность общественных объединений и СО НКО</h5>
@@ -73,7 +73,7 @@
           <button class="slider__btn"> <a href="#">Подробнее</a></button>
         </div>
       </div>
-      <div class="slider__item slider__item-4" style="background-image: url(../img/slider-img-4.png);">
+      <div class="slider__item slider__item-4" style="background-image: url(img/slider-img-4.png);">
         <div class="slider__inner">
           <div class="slider__text">
             <h5 class="slider__uptite title">КОНЦЕПЦИЯ государственной семейной политики 
@@ -84,7 +84,7 @@
           <button class="slider__btn"> <a href="#">Подробнее</a></button>
         </div>
       </div>
-      <div class="slider__item slider__item-5" style="background-image: url(../img/slider-img-5.png);">
+      <div class="slider__item slider__item-5" style="background-image: url(img/slider-img-5.png);">
         <div class="slider__inner">
           <div class="slider__text">
             <h3 class="slider__subtitle subtitle">Истории успешных </h3>
@@ -93,7 +93,7 @@
           <button class="slider__btn"> <a href="#">Подробнее</a></button>
         </div>
       </div>
-      <div class="slider__item slider__item-6" style="background-image: url(../img/slider-img-6.png);">
+      <div class="slider__item slider__item-6" style="background-image: url(img/slider-img-6.png);">
         <div class="slider__inner">
           <div class="slider__text">
             <h3 class="slider__subtitle subtitle">Семейный кодекс Российской Федерации </h3>
@@ -316,7 +316,7 @@
         </div>
       </div>
   </section>
-  <section class="form" style="background-image: url(../img/form-bg.jpg);">
+  <section class="form" style="background-image: url(img/form-bg.jpg);">
     <h2 class="form__title title">Задать вопрос специалисту</h2>
     <div class="form__container container">
       <form action="" method="" class="form__form">
@@ -330,7 +330,7 @@
       </form>
     </div>
   </section>
-  <footer class="footer" style="background-image: url(../img/footer-img.jpg);">
+  <footer class="footer" style="background-image: url(img/footer-img.jpg);">
     <div class="footer__container container">
       <p class="footer__descr title">© 2020 Семейный портал Республики Мордовия </p>
     </div>
