--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           <img src="img/header-photo-4.png" alt="Сохрани жизнь" class="header__photos-item">
         </div>
         <div class="header__items">
-          <a href="" class="header__search"><img src="img/serch.png" alt="искать"></a>
+          <a href="template.html" class="header__search"><img src="img/serch.png" alt="искать"></a>
           <a href="" class="header__eye"><img src="img/eye.png" alt=""></a>
         </div>
       </div>
@@ -51,7 +51,7 @@
               <h3 class="slider__subtitle subtitle">Демографическая политика</h3>
               <h2 class="slider__title title">России быть!</h2>
             </div>
-            <button class="slider__btn"> <a href="#">Подробнее</a></button>
+            <a class="slider__btn" href="#">Подробнее</a>
           </div>
       </div>
       <div class="slider__item slider__item-2" style="background-image: url(img/slider-img-2.png);">
@@ -60,7 +60,7 @@
             <h3 class="slider__subtitle subtitle">Семейная политика:</h3>
             <h2 class="slider__title title">Многодетная семья в тренде!</h2>
           </div>
-          <button class="slider__btn"> <a href="#">Подробнее</a></button>
+          <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
       <div class="slider__item slider__item-3" style="background-image: url(img/slider-img-3.png);">
@@ -70,7 +70,7 @@
             <h3 class="slider__subtitle subtitle">Наша миссия</h3>
             <h2 class="slider__title title">это защита и укрепление семьи и традиционных семейных ценностей</h2>
           </div>
-          <button class="slider__btn"> <a href="#">Подробнее</a></button>
+          <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
       <div class="slider__item slider__item-4" style="background-image: url(img/slider-img-4.png);">
@@ -81,7 +81,7 @@
             <h3 class="slider__subtitle subtitle">Поддержка и защита семьи</h3>
             <h2 class="slider__title title">как фундаментальной основы российского общества, сохранение традиционных семейных ценностей, повышение роли семьи в жизни общества</h2>
           </div>
-          <button class="slider__btn"> <a href="#">Подробнее</a></button>
+          <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
       <div class="slider__item slider__item-5" style="background-image: url(img/slider-img-5.png);">
@@ -90,7 +90,7 @@
             <h3 class="slider__subtitle subtitle">Истории успешных </h3>
           <h2 class="slider__title title">и знаменитых людей из многодетных семей. Они родились третьими, ... пятыми, ...семнадцатами...</h2>
           </div>
-          <button class="slider__btn"> <a href="#">Подробнее</a></button>
+          <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
       <div class="slider__item slider__item-6" style="background-image: url(img/slider-img-6.png);">
@@ -99,7 +99,7 @@
             <h3 class="slider__subtitle subtitle">Семейный кодекс Российской Федерации </h3>
           <h2 class="slider__title title">Семейный кодекс РФ — это первый в истории страны федеральный закон, который целиком и полностью посвящён семье, факторам ей формирования, сохранения и поддержания</h2>
           </div>
-          <button class="slider__btn"> <a href="#">Подробнее</a></button>
+          <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
     </div>
@@ -125,7 +125,7 @@
       </div>
       <div class="news__inner">
         <div class="news__item">
-          <img src="img/news-1.png" class="news__item-img">
+          <img  alt=""src="img/news-1.png" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
           </div>
@@ -133,14 +133,14 @@
             Дом-музей семьи Ульяновых передан на праве оперативного управления Северному драматическому театру им. М.А. Ульянова. Директор Северного драматического театра им. М.А. Ульянова Анджей Неупокоев сообщил, что …
           </p>
           <a href="" class="news__item-link">Полезная информация</a>
-          <a href=""><button class="news__item-btn">Подробнее</button></a>
+          <a href="" class="news__item-btn">Подробнее</a>
           <div class="news__item-date">
             <p class="news__item-date-num">03</p>
             <p class="news__item-date-mounth">Июня</p>
           </div>
         </div>
         <div class="news__item">
-          <img src="img/news-2.png" class="news__item-img">
+          <img alt=""src="img/news-2.png" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира  
           </div>
@@ -148,14 +148,14 @@
             Дом-музей семьи Ульяновых передан на праве оперативного управления Северному драматическому театру им. М.А. Ульянова. Директор Северного драматического театра им. М.А. Ульянова Анджей Неупокоев сообщил, что …
           </p>
           <a href="" class="news__item-link">Куда сходить с ребенком</a>
-          <a href=""><button class="news__item-btn">Подробнее</button></a>
+          <a href="" class="news__item-btn">Подробнее</a>
           <div class="news__item-date">
             <p class="news__item-date-num">06</p>
             <p class="news__item-date-mounth">августа</p>
           </div>
         </div>
         <div class="news__item">
-          <img src="img/news-3.png" class="news__item-img">
+          <img alt=""src="img/news-3.png" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
           </div>
@@ -163,7 +163,7 @@
             Дом-музей семьи Ульяновых передан на праве оперативного управления Северному драматическому театру им. М.А. Ульянова. Директор Северного драматического театра им. М.А. Ульянова Анджей Неупокоев сообщил, что …
           </p>
           <a href="#" class="news__item-link">Куда сходить с ребенком</a>
-          <a href="#"><button class="news__item-btn">Подробнее</button></a>
+          <a href="" class="news__item-btn">Подробнее</a>
           <div class="news__item-date">
             <p class="news__item-date-num">03</p>
             <p class="news__item-date-mounth">Июня</p>
@@ -209,7 +209,7 @@
           </div>
         </div>
         <div class="important__item">
-          <img src="img/important-2.jpg" class="important__item-img">
+          <img src="img/important-2.jpg" alt="photo" class="important__item-img">
           <div class="important__item-inner">
             <h1 class="important__item-subtitle title">Полезная информация</h1>
             <p class="important__item-mounth">3 июня 2020 г.</p>
@@ -218,7 +218,7 @@
           </div>
         </div>
         <div class="important__item">
-          <img src="img/important-3.jpg" class="important__item-img">
+          <img src="img/important-3.jpg" alt="photo" class="important__item-img">
           <div class="important__item-inner">
             <h1 class="important__item-subtitle title">Полезная информация</h1>
             <p class="important__item-mounth">3 июня 2020 г.</p>
@@ -227,7 +227,7 @@
           </div>
         </div>
         <div class="important__item">
-          <img src="img/important-4.jpg" class="important__item-img">
+          <img src="img/important-4.jpg" alt="photo" class="important__item-img">
           <div class="important__item-inner">
             <h1 class="important__item-subtitle title">Полезная информация</h1>
             <p class="important__item-mounth">3 июня 2020 г.</p>
@@ -236,7 +236,7 @@
           </div>
         </div>
         <div class="important__item">
-          <img src="img/important-5.jpg" class="important__item-img">
+          <img src="img/important-5.jpg" alt="photo" class="important__item-img">
           <div class="important__item-inner">
             <h1 class="important__item-subtitle title">Полезная информация</h1>
             <p class="important__item-mounth">3 июня 2020 г.</p>
@@ -271,7 +271,7 @@
       </div>
       <div class="news__inner">
         <div class="news__item">
-          <img src="img/info-1.jpg" class="news__item-img">
+          <img alt=""src="img/info-1.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
           <div class="news__item-title title">
             Бюджетирование. Личный бюджет  
@@ -279,10 +279,10 @@
           <p class="news__item-text text">
             “Бюджетирование. Личный бюджет” Вместо вступления… Финансы – это понятие прочно вошло в нашу жизнь. Мы постоянно находимся в финансовых 
           </p>
-          <a href=""><button class="news__item-btn">Подробнее</button></a>
+          <a href="" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
-          <img src="img/info-2.jpg" class="news__item-img">
+          <img alt=""src="img/info-2.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
           <div class="news__item-title title">
             Бюджетирование. Личный бюджет  
@@ -290,10 +290,10 @@
           <p class="news__item-text text">
             “Бюджетирование. Личный бюджет” Вместо вступления… Финансы – это понятие прочно вошло в нашу жизнь. Мы постоянно находимся в финансовых 
           </p>
-          <a href=""><button class="news__item-btn">Подробнее</button></a>
+          <a href="" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
-          <img src="img/info-3.jpg" class="news__item-img">
+          <img alt=""src="img/info-3.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
           <div class="news__item-title title">
             Бюджетирование. Личный бюджет  
@@ -301,10 +301,10 @@
           <p class="news__item-text text">
             “Бюджетирование. Личный бюджет” Вместо вступления… Финансы – это понятие прочно вошло в нашу жизнь. Мы постоянно находимся в финансовых 
           </p>
-          <a href=""><button class="news__item-btn">Подробнее</button></a>
+          <a href="" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
-          <img src="img/info-4.jpg" class="news__item-img">
+          <img alt=""src="img/info-4.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
           <div class="news__item-title title">
             Бюджетирование. Личный бюджет  
@@ -315,6 +315,7 @@
           <a href=""><button class="news__item-btn">Подробнее</button></a>
         </div>
       </div>
+    </div>
   </section>
   <section class="form" style="background-image: url(img/form-bg.jpg);">
     <h2 class="form__title title">Задать вопрос специалисту</h2>
@@ -324,7 +325,7 @@
           <input type="text" class="form__input" placeholder="Ваше имя" >
           <input type="text" class="form__input" placeholder="Ваш телефон" >
           <input type="text" class="form__input" placeholder="Ваш email" >
-          <textarea type="text" class="form__input form__input-big" placeholder="Вашe сообщение"></textarea>
+          <textarea class="form__input form__input-big" placeholder="Вашe сообщение"></textarea>
         </div>
         <button type="submit" class="form__btn">Подробнее</button>
       </form>
