--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
       </div>
       <div class="news__inner">
         <div class="news__item">
-          <img  alt=""src="img/news-1.png" class="news__item-img">
+          <img  alt="" src="img/news-1.png" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
           </div>
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="news__item">
-          <img alt=""src="img/news-2.png" class="news__item-img">
+          <img alt="" src="img/news-2.png" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира  
           </div>
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div class="news__item">
-          <img alt=""src="img/news-3.png" class="news__item-img">
+          <img alt="" src="img/news-3.png" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
           </div>
@@ -271,7 +271,7 @@
       </div>
       <div class="news__inner">
         <div class="news__item">
-          <img alt=""src="img/info-1.jpg" class="news__item-img">
+          <img alt="" src="img/info-1.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
           <div class="news__item-title title">
             Бюджетирование. Личный бюджет  
@@ -282,7 +282,7 @@
           <a href="" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
-          <img alt=""src="img/info-2.jpg" class="news__item-img">
+          <img alt="" src="img/info-2.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
           <div class="news__item-title title">
             Бюджетирование. Личный бюджет  
@@ -293,7 +293,7 @@
           <a href="" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
-          <img alt=""src="img/info-3.jpg" class="news__item-img">
+          <img alt="" src="img/info-3.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
           <div class="news__item-title title">
             Бюджетирование. Личный бюджет  
@@ -304,7 +304,7 @@
           <a href="" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
-          <img alt=""src="img/info-4.jpg" class="news__item-img">
+          <img alt="" src="img/info-4.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
           <div class="news__item-title title">
             Бюджетирование. Личный бюджет  
@@ -312,7 +312,7 @@
           <p class="news__item-text text">
             “Бюджетирование. Личный бюджет” Вместо вступления… Финансы – это понятие прочно вошло в нашу жизнь. Мы постоянно находимся в финансовых 
           </p>
-          <a href=""><button class="news__item-btn">Подробнее</button></a>
+          <a href="" class="news__item-btn">Подробнее</a>
         </div>
       </div>
     </div>
