--- a/app/app/index.html
+++ b/app/app/index.html
@@ -80,7 +80,7 @@
   <section class="slider">
     
     <div class="slider__container">
-      <div class="slider__item slider__item-1" style="background-image: url(img/slider-img-1.png);">
+      <div class="slider__item slider__item-1" style="background-image: url(img/slider-img-1.jpg);">
           <div class="slider__inner">
             <div class="slider__text">
               <h3 class="slider__subtitle subtitle">Демографическая политика</h3>
@@ -89,7 +89,7 @@
             <a class="slider__btn" href="#">Подробнее</a>
           </div>
       </div>
-      <div class="slider__item slider__item-2" style="background-image: url(img/slider-img-2.png);">
+      <div class="slider__item slider__item-2" style="background-image: url(img/slider-img-2.jpg);">
         <div class="slider__inner">
           <div class="slider-text">
             <h3 class="slider__subtitle subtitle">Семейная политика:</h3>
@@ -98,7 +98,7 @@
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
-      <div class="slider__item slider__item-3" style="background-image: url(img/slider-img-3.png);">
+      <div class="slider__item slider__item-3" style="background-image: url(img/slider-img-3.jpg);">
         <div class="slider__inner">
           <div class="slider__text">
             <h5 class="slider__uptite title">Деятельность общественных объединений и СО НКО</h5>
@@ -108,7 +108,7 @@
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
-      <div class="slider__item slider__item-4" style="background-image: url(img/slider-img-4.png);">
+      <div class="slider__item slider__item-4" style="background-image: url(img/slider-img-4.jpg);">
         <div class="slider__inner">
           <div class="slider__text">
             <h5 class="slider__uptite title">КОНЦЕПЦИЯ государственной семейной политики 
@@ -119,7 +119,7 @@
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
-      <div class="slider__item slider__item-5" style="background-image: url(img/slider-img-5.png);">
+      <div class="slider__item slider__item-5" style="background-image: url(img/slider-img-5.jpg);">
         <div class="slider__inner">
           <div class="slider__text">
             <h3 class="slider__subtitle subtitle">Истории успешных </h3>
@@ -128,7 +128,7 @@
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
-      <div class="slider__item slider__item-6" style="background-image: url(img/slider-img-6.png);">
+      <div class="slider__item slider__item-6" style="background-image: url(img/slider-img-6.jpg);">
         <div class="slider__inner">
           <div class="slider__text">
             <h3 class="slider__subtitle subtitle">Семейный кодекс Российской Федерации </h3>
@@ -163,7 +163,7 @@
       </div>
       <div class="news__inner">
         <div class="news__item">
-          <img  alt="" src="img/news-1.png" class="news__item-img">
+          <img  alt="" src="img/news-1.jpg" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
           </div>
@@ -178,7 +178,7 @@
           </div>
         </div>
         <div class="news__item">
-          <img alt="" src="img/news-2.png" class="news__item-img">
+          <img alt="" src="img/news-2.jpg" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира  
           </div>
@@ -193,7 +193,7 @@
           </div>
         </div>
         <div class="news__item">
-          <img alt="" src="img/news-3.png" class="news__item-img">
+          <img alt="" src="img/news-3.jpg" class="news__item-img">
           <div class="news__item-title title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
           </div>
@@ -221,8 +221,8 @@
         class="datepicker-here"></div>
       </div>
       <div class="calendar__photos">
-        <img src="img/calendar-1.png" alt="Дерево" class="calendar__photo calendar__photo-1">
-        <img src="img/calendar-2.png" alt="Счастье" class="calendar__photo calendar__photo-2">
+        <img src="img/calendar-2.jpg" alt="Дерево" class="calendar__photo calendar__photo-1">
+        <img src="img/calendar-1.jpg" alt="Счастье" class="calendar__photo calendar__photo-2">
       </div>
     </div>
   </div>
