--- a/app/app/article.html
+++ b/app/app/article.html
@@ -107,7 +107,7 @@
             </ul>
           </div>
           <div class="article__img-inner">
-            <img class="article__img" src="img/calendar-1.png" alt="photo">
+            <img class="article__img" src="img/calendar-1.jpg" alt="photo">
           </div>
         </div>
       </div>
