--- a/app/app/template.html
+++ b/app/app/template.html
@@ -19,9 +19,40 @@
   </div>
   <header class="header">
     <div class="header__container container">
+      <div class="header__burger-inner">
+        <div class="header__logo-inner">
+          <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
+        <a href="" class="header__text">
+          <h3 class="header__title title">
+            Семейный портал
+          </h3>
+          <p class="header__subtitle subtitle">
+            Республика Мордовия
+          </p>
+        </a>
+        <div class="header__burger-burger">
+          <span></span>
+        </div>
+        </div>
+        <div class="header__burger-hide">
+          <div class="header__photos">
+            <a href="#" class="header__photos-item" ><img src="img/header-photo-1.png" alt="Ассоциация Организаций по защите семей"></a>
+            <a href="#" class="header__photos-item" ><img src="img/header-photo-2.png" alt="Зарождение просемейный проект"></a>
+            <a href="template.html" class="header__photos-item" ><img src="img/header-photo-3.png" alt="Фонд президентских грантов"></a>
+            <a href="article.html" class="header__photos-item" ><img src="img/header-photo-4.png" alt="Сохрани жизнь"></a>
+          </div>
+          <div class="header__items__inner">
+            <div class="header__items">
+              <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
+              <a href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></a>
+            </div>
+            <input type="text" class="header__search-input" placeholder="Искать">
+          </div>
+        </div>
+      </div>
       <div class="header__inner">
         <div class="header__logo-inner">
-          <img src="img/logo.png" alt="" class="header__logo">
+          <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
         <div class="header__text">
           <h3 class="header__title title">
             Семейный портал
@@ -32,14 +63,17 @@
         </div>
         </div>
         <div class="header__photos">
-          <img src="img/header-photo-1.png" alt="Ассоциация Организаций по защите семей" class="header__photos-item">
-          <img src="img/header-photo-2.png" alt="Зарождение просемейный проект" class="header__photos-item">
-          <img src="img/header-photo-3.png" alt="Фонд президентских грантов" class="header__photos-item">
-          <img src="img/header-photo-4.png" alt="Сохрани жизнь" class="header__photos-item">
+          <a href="#" class="header__photos-item" ><img src="img/header-photo-1.png" alt="Ассоциация Организаций по защите семей"></a>
+          <a href="#" class="header__photos-item" ><img src="img/header-photo-2.png" alt="Зарождение просемейный проект"></a>
+          <a href="template.html" class="header__photos-item" ><img src="img/header-photo-3.png" alt="Фонд президентских грантов"></a>
+          <a href="article.html" class="header__photos-item" ><img src="img/header-photo-4.png" alt="Сохрани жизнь"></a>
         </div>
-        <div class="header__items">
-          <a href="" class="header__search"><img src="img/serch.png" alt="искать"></a>
-          <a href="" class="header__eye"><img src="img/eye.png" alt=""></a>
+        <div class="header__items__inner">
+          <div class="header__items">
+            <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
+            <a href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></a>
+          </div>
+          <input type="text" class="header__search-input" placeholder="Искать">
         </div>
       </div>
     </div>
@@ -96,7 +130,7 @@
         </div>
         <div class="news__inner news__inner-template contents">
           <div id="tab"  class="news__item">
-            <img  alt="" src="img/news-1.png" class="news__item-img">
+            <img  alt="" src="img/news-1.jpg" class="news__item-img">
             <div class="news__item-title title">
               Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
             </div>
@@ -111,7 +145,7 @@
             </div>
           </div>
           <div id="tab"  class="news__item">
-            <img alt="" src="img/news-2.png" class="news__item-img">
+            <img alt="" src="img/news-2.jpg" class="news__item-img">
             <div class="news__item-title title">
               Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира  
             </div>
@@ -126,7 +160,7 @@
             </div>
           </div>
           <div id="tab"  class="news__item">
-            <img alt="" src="img/news-3.png" class="news__item-img">
+            <img alt="" src="img/news-3.jpg" class="news__item-img">
             <div class="news__item-title title">
               Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
             </div>
@@ -141,7 +175,7 @@
             </div>
           </div>
           <div id="tab"  class="news__item">
-            <img  alt="" src="img/news-1.png" class="news__item-img">
+            <img  alt="" src="img/news-1.jpg" class="news__item-img">
             <div class="news__item-title title">
               Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
             </div>
@@ -156,7 +190,7 @@
             </div>
           </div>
           <div id="tab"  class="news__item">
-            <img  alt="" src="img/news-1.png" class="news__item-img">
+            <img  alt="" src="img/news-1.jpg" class="news__item-img">
             <div class="news__item-title title">
               Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
             </div>
@@ -171,7 +205,7 @@
             </div>
           </div>
           <div id="tab"  class="news__item">
-            <img  alt="" src="img/news-1.png" class="news__item-img">
+            <img  alt="" src="img/news-1.jpg" class="news__item-img">
             <div class="news__item-title title">
               Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
             </div>
@@ -218,11 +252,11 @@
     </section>
 
 
-  <footer class="footer" style="background-image: url(img/footer-img.jpg);">
-    <div class="footer__container container">
-      <p class="footer__descr title">© 2020 Семейный портал Республики Мордовия </p>
-    </div>
-  </footer>
+    <footer class="footer" style="background-image: url(img/footer-img.jpg);">
+      <div class="footer__container">
+        <p class="footer__descr title">© 2020 Семейный портал Республики Мордовия </p>
+      </div>
+    </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/pagination.js"></script>
