--- a/app/app/article.html
+++ b/app/app/article.html
@@ -41,9 +41,12 @@
             <a href="template.html" class="header__photos-item" ><img src="img/header-photo-3.png" alt="Фонд президентских грантов"></a>
             <a href="article.html" class="header__photos-item" ><img src="img/header-photo-4.png" alt="Сохрани жизнь"></a>
           </div>
-          <div class="header__items">
-            <a href="#" class="header__search"><img src="img/serch.png" alt="искать"></a>
-            <a href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></a>
+          <div class="header__items__inner">
+            <div class="header__items">
+              <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
+              <a href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></a>
+            </div>
+            <input type="text" class="header__search-input" placeholder="Искать">
           </div>
         </div>
       </div>
